# kernelito

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  linker.ld  linker2.ld  linker_old.ld  rust-toolchain.toml
.cargo/: config.toml
arch/: i686.json  i686_bin.json
bootloader/: boot.asm  gdt.asm  kernel_loading.asm  main.asm  switch_pmode.asm
bootloader/utils/: disk.asm
c_kernel/.ccls-cache/@home@gabriel@dev@workspaces@kernelito@src@c_kernel/: kernel.c.blob
crafted_bootloader/: gdt.asm  kernel_entry.asm
crafted_bootloader/utils/: debug_print.asm  disk32.asm
linker_scripts/: linker3.ld
mb-bootloader/: boot.asm  boot.s
src/: checks.rs  errors.rs  lib.rs  log.rs
src/bootloader/: boot.asm  switch_pmode.asm
src/bootloader/utils/: disk.asm
src/c_kernel/: kernel.c
src/cpu/: mod.rs
src/idt/: handlers.rs  mod.rs  test_handlers.rs
src/io/: mod.rs
src/io_ports/: mod.rs
src/kernel/: Cargo.toml  linker.ld
src/kernel/.cargo/: config.toml
src/kernel/src/: main.rs
src/kernel/src/vga/: mod.rs
src/mem/: mod.rs
src/mem/frame_allocator/: mod.rs
src/mem/paging/: mod.rs
src/mem/sync/: mod.rs  spin_mutex.rs  spin_rw_lock.rs
src/multiboot/: mod.rs
src/paging/: mod.rs
src/pic/: mod.rs
src/vga/: macros.rs  mod.rs  utils.rs
utils/: debug_print.asm
