
[package]
name = "kernelito"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = "s"
# overflow-checks = false

[profile.release]
panic = "abort"
# debug = true
# debug-assertions = false

## To super optiomizing stip kernel
# lto = true
# incremental = false
# overflow-checks = false

## Optimize for size
# opt-level = "z"

[dependencies]
lazy_static = {version = "1.4", features= ["spin_no_std"]}

[dev-dependencies]
ntest = "0.8"

[features]
default = []
checks-mode = []

